tweaks to layout

--- a/css/site.css
+++ b/css/site.css
@@ -28,16 +28,13 @@ div.container {
 }
 div.content-header span{
   position: absolute;
-  Zpadding-left: 50px;
   bottom: 0;
   left: 0;
 }
 div.content-header {
   position: relative;
   width:100%;
-  Zbackground-color: #eee8d5;
   text-align: bottom;
-  Zpadding-left: 50px;
   border-bottom: 10px solid;
   border-color: #cb4b16;
   font-variant: small-caps;
@@ -54,7 +51,6 @@ div.full-header {
 div.content-container {
   background-color: #ffffff;
   width:100%;
-  Zborder-radius: 5px;
   min-height: 200px;
   margin-left: 0px;
   margin-right: 0px;
@@ -65,15 +61,15 @@ div.columns-wrapper {
   display:table;
 }
 div.columns {
+  table-layout: fixed;
   width:100%;
-  display:table-row; 
+  display:table;
 }
 div.content {
   vertical-align: top;
   display:table-cell; 
   padding-left: 10px;
   padding-right: 10px;
-  width: 70%;
 }
 div.columntwo {
   vertical-align: top;
@@ -81,10 +77,11 @@ div.columntwo {
   padding-right: 15px;
   padding-left: 15px;
   background-color: #eee8d5;
-  Zwidth: 30%;
+  width: 200px;
 }
 div.columntwo-content {
   padding-top: 100px;
+  width:100%;
 }
 div.content p {
   margin-top:20px;
@@ -143,5 +140,4 @@ div.codesample pre a:before {
   content: counter(linecounter);
   width: 2em;
   display: inline-block;
-  Zborder-right: 1px solid black;
 }
